--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="container">
         <h1>Seleziona cosa comprare e visualizza la lista </h1>
 
-        <!-- section widht checkbos -->
+        <!-- section with checkbox -->
         <div class="items_container">
             <div class="items_section">
                 <div>
@@ -114,7 +114,7 @@
         <!-- button show list -->
         <button id="btn_view">Visualizza lista</button>
 
-        
+
         <!-- list section (JavaScript) -->
         <div class="list_section d-none">
             <h2>La tua lista: </h2>
